# TRACKER

./: calibration_helper.py  gantry_centering.py  pyproject.toml
EPIs/: class_based_analyzer.py  config.py  constants.py  data.yaml  download_and_preprocess.py  main.py  preprocess_images.py  training.py
EPIs/runs/detect/train/: args.yaml
EPIs/runs/detect/train10/: args.yaml
EPIs/runs/detect/train11/: args.yaml  results.csv
EPIs/runs/detect/train12/: args.yaml
EPIs/runs/detect/train13/: args.yaml  results.csv
EPIs/runs/detect/train2/: args.yaml
EPIs/runs/detect/train3/: args.yaml
EPIs/runs/detect/train4/: args.yaml
EPIs/runs/detect/train5/: args.yaml
EPIs/runs/detect/train6/: args.yaml
EPIs/runs/detect/train7/: args.yaml
EPIs/runs/detect/train8/: args.yaml  results.csv
EPIs/runs/detect/train82/: args.yaml
EPIs/runs/detect/train9/: args.yaml
gantryApp/frontend/src/: App.jsx
gantryApp/frontend/src/components/: VideoPlayer.jsx
gantryApp/gantry-main/: api.py  requirements.txt
