[tool.poetry]
name = "gantry-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "*"
flask-cors = "*"
pyserial = "*"
numpy = "*"
opencv-python = "*"
aravis-python = "*"
cameras = {git = "https://github.com/ATRIA-Repositories/CAMERAS.git", branch = "main"}
ultralytics = "^8.3.217"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
